--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -17,7 +17,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId 'com.zhihu.matisse.sample'
@@ -39,8 +38,9 @@ ext.supportLibVersion = '27.1.1'
 
 dependencies {
     implementation project(':matisse')
+    implementation project(':matisser')
 
-//    implementation 'com.zhihu.android:matisse:0.5.1-beta1'
+    //implementation 'com.zhihu.android:matisse:0.5.1-beta1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
