--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'top.zibin:Luban:1.1.8'
 }
