--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,19 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url "https://jitpack.io" }
     }
+
+    /*subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.android.support'
+                        && !details.requested.name.contains('multidex') ) {
+                    details.useVersion "27.1.1"
+                }
+            }
+        }
+    }*/
 }
 
 task clean(type: Delete) {
