--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation 'top.zibin:Luban:1.1.8'
+    implementation 'com.github.yalantis:ucrop:2.2.2' //3
 }
